@@ -6,6 +6,7 @@ However contributors are encouraged to add their own entries for their work.
 
 Since build 225:
 ----------------
+* Conversions to and from COM VT_DATE types should no longer lose milliseconds.
 
 Since build 224:
 ----------------
